Добавлен раздел "А ещё..."

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <title>Denixel GitHub</title>
 </head>
@@ -81,7 +81,24 @@
         </div>
     </div>
 
-    <h3>Обо мне</h3>
+    <h3>А ещё...</h3>
+    <img src="images/cat.jpg" id="cat-img">
+    <img src="images/orange.jpg" id="orange-img">
+    <p>
+        Со мной живёт чудесный, но порой вредный кот сиамской породы.
+        Однако это не вовсе не говорит о том, что Стёпу никто не любит.
+        В жаркие дни, он любит отдыхать в тени моего мандарина,
+        выращенного из косточки с первого раза. Хоть мандарины на нём и 
+        не растут, но я верю, что когда-нибудь он зацветёт. За всю свою
+        многолетнюю историю с 2021 года с ним многое случалось. Он пережил
+        несколько холодных, тёмных зим на окне, обжигающе горячее солнце 
+        летом, многократные листопады и потери зелёной кроны, регулярные 
+        налёты букашек и вредителей. А опираясь на его пример, я выращиваю 
+        парочку лимонов, которые как и их старший товарищ относятся к 
+        классу цитрусовых, но им ещё многое предстоит.
+    </p>
+
+    <h3 id="about-h3">Обо мне</h3>
     <div id="content-block-3">
         <p class="block-1" id="about">
             Свои проекты я часто публикую в своём открытом профиле на 
@@ -97,6 +114,4 @@
     </div>
 
 </body>
-
 </html>
-
